# remote-sensing-pipeline

./: .gitignore  README.md  docker-compose.yml
cpp-core/: CMakeLists.txt  Dockerfile
cpp-core/src/: httplib_wrapper.hpp  main.cpp
cpp-core/src/api/: http_gateway.cpp  http_gateway.hpp
cpp-core/src/common/: logger.hpp  types.hpp
cpp-core/src/database/: postgis_client.cpp  postgis_client.hpp
cpp-core/src/inference/: ai_interface.hpp  mock_ai.cpp  mock_ai.hpp  onnx_ai.cpp  onnx_ai.hpp  onnx_obb_ai.cpp  onnx_obb_ai.hpp  onnx_segformer_ai.cpp  onnx_segformer_ai.hpp
cpp-core/src/monitoring/: udp_broadcaster.cpp  udp_broadcaster.hpp
cpp-core/src/pipeline/: coordinate_mapper.cpp  coordinate_mapper.hpp  state_machine.cpp  state_machine.hpp  thread_pool.cpp  thread_pool.hpp  tile_queue.hpp  tiling_engine.cpp  tiling_engine.hpp
cpp-core/src/stitching/: stitcher.cpp  stitcher.hpp
cpp-core/tests/: test_state_machine.cpp
database/: init.sql
docs/: ARCHITECTURE.md  CONCURRENCY.md  INFERENCE_AND_STITCHING.md  PIPELINE.md
frontend/: Dockerfile  README.md  bridge.cjs  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: backend.js
frontend/src/components/: ControlPanel.jsx  MapView.jsx  TelemetryChart.jsx
frontend/src/hooks/: useTelemetry.js
frontend/src/models/: modelRegistry.js
tools/: stress_test.py  udp_receiver.py
